--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                                 <div class="card border-0 mb-3" style="background-color: #BAFFAD;">
                                     <div class="row g-0">
                                         <div class="col-md-4">
-                                        <img class="card-img-top ps-2" src="assets/images/shambani-image-placeholder.svg" alt="...">
+                                        <img class="card-img-top p-2" src="assets/images/shambani-image-placeholder.svg" alt="...">
                                         </div>
                                         <div class="col-md-8">
                                         <div class="card-body">
@@ -252,7 +252,7 @@
                                         </div>
                                         </div>
                                         <div class="col-md-4">
-                                        <img class="card-img-top pe-2" src="assets/images/shambani-image-placeholder.svg" alt="...">
+                                        <img class="card-img-top p-2" src="assets/images/shambani-image-placeholder.svg" alt="...">
                                         </div>
                                     </div>
                                 </div>
