--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                     <div class="py-3 position-relative">
                         <h1 class="text-center">Welcome to Shambani</h1>
-                        <p class="text-center">A group of farmers passionate about <em>efficiency, high quality</em> in our quest towards Feeding the nation and the globe.</p>
+                        <p class="text-center p-2">A group of farmers passionate about <em>efficiency, high quality</em> in our quest towards Feeding the nation and the globe.</p>
                         <div class="row">
                             <div class="d-grid gap-2 d-md-block">
                                 <p class="text-center py-3">
@@ -816,7 +816,7 @@
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                             <div class="py-3">
                                 <h5 class="h1 text-center">Our Vision</h5>
-                                <p class="text-center py">To be Your First Choice when in matters food and poultry.</p>
+                                <p class="text-center p-2">To be Your First Choice when in matters food and poultry.</p>
                             </div>
                         </div>
                     </div>
